--- a/KnightBites/package.json
+++ b/KnightBites/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@nextui-org/input": "^2.2.5",
     "@react-native-picker/picker": "^2.8.1",
     "@react-navigation/native": "^6.0.2",
     "expo": "^51.0.34",
