--- a/KnightBites/package.json
+++ b/KnightBites/package.json
@@ -19,7 +19,7 @@
     "@nextui-org/input": "^2.2.5",
     "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/native": "^6.0.2",
-    "expo": "~51.0.39",
+    "expo": "^52.0.9",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
@@ -34,6 +34,7 @@
     "react-native": "0.74.5",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-modal": "^13.0.1",
     "react-native-navigation-bar-color": "^2.0.2",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
