--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -2,8 +2,7 @@ name: ESLint Check
 
 on:
   pull_request:
-    branches:
-      - '*'
+    types: [opened, synchronize, reopened]
 
 jobs:
   eslint:
