--- a/KnightBites/package.json
+++ b/KnightBites/package.json
@@ -9,7 +9,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "eslint ." 
+    "lint": "eslint ."
   },
   "jest": {
     "preset": "jest-expo"
@@ -28,6 +28,7 @@
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.3",
     "expo-web-browser": "~14.0.1",
+    "lint": "^0.8.19",
     "md5": "^2.3.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -50,14 +51,14 @@
     "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.3.0",
     "eslint": "^8.57.0",
+    "eslint-config-expo": "~8.0.1",
     "eslint-plugin-react": "^7.37.2",
     "globals": "^15.12.0",
     "jest": "^29.7.0",
     "jest-expo": "~52.0.2",
     "react-test-renderer": "18.3.1",
     "typescript": "~5.6.3",
-    "typescript-eslint": "^8.15.0",
-    "eslint-config-expo": "~8.0.1"
+    "typescript-eslint": "^8.15.0"
   },
   "private": true
 }
