--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
     "expo": "^51.0.38"
   },
   "devDependencies": {
+    "@eslint/js": "^9.16.0",
+    "eslint": "^9.16.0",
+    "eslint-plugin-react": "^7.37.2",
+    "globals": "^15.13.0",
     "metro": "^0.81.0"
   }
 }
