--- a/KnightBites/package.json
+++ b/KnightBites/package.json
@@ -50,14 +50,14 @@
     "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.3.0",
     "eslint": "^8.57.0",
+    "eslint-config-expo": "~8.0.1",
     "eslint-plugin-react": "^7.37.2",
     "globals": "^15.12.0",
     "jest": "^29.7.0",
     "jest-expo": "~52.0.2",
     "react-test-renderer": "18.3.1",
     "typescript": "~5.6.3",
-    "typescript-eslint": "^8.15.0",
-    "eslint-config-expo": "~8.0.1"
+    "typescript-eslint": "^8.15.0"
   },
   "private": true
 }
