--- a/KnightBites/package.json
+++ b/KnightBites/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
     "@nextui-org/input": "^2.2.5",
-    "@react-native-picker/picker": "^2.9.0",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/native": "^7.0.4",
     "expo": "^52.0.10",
     "expo-constants": "~17.0.3",
@@ -31,14 +31,14 @@
     "md5": "^2.3.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.3",
+    "react-native": "0.76.5",
     "react-native-dropdown-picker": "^5.4.6",
-    "react-native-gesture-handler": "~2.21.2",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-modal": "^13.0.1",
     "react-native-navigation-bar-color": "^2.0.2",
     "react-native-reanimated": "~3.16.2",
-    "react-native-safe-area-context": "4.14.0",
-    "react-native-screens": "4.3.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13"
   },
